# svg_sanitizer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASING.md  checksum-Elixir.SvgHush.Native.exs  checksum-Elixir.SvgSanitizer.Native.exs  mix.exs
.github/workflows/: release.yml  test.yml
lib/: svg_hush.ex  svg_sanitizer.ex
lib/svg_hush/: native.ex
lib/svg_sanitizer/: native.ex
native/svg_hush_nif/: Cargo.toml
native/svg_hush_nif/src/: lib.rs
native/svg_sanitizer_nif/: Cargo.toml
native/svg_sanitizer_nif/src/: lib.rs
test/: svg_hush_test.exs  svg_sanitizer_test.exs
