[package]
name = "svg_hush_nif"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[lib]
name = "svg_hush_nif"
crate-type = ["cdylib"]

[dependencies]
# default-features = false so we don't pin a NIF version implicitly;
# the active version is selected by the feature flags below.
rustler = { version = "0.38", default-features = false }
svg-hush = "0.9"

# Rustler >=0.30 requires every consumer crate to declare which NIF
# versions it supports as explicit features. NO default is set on
# purpose: rustler's mix integration passes --features matching the
# current OTP's NIF version at compile time, and rustler_precompiled-action
# passes the right --features per matrix entry. Having a default here would
# leave a second nif_version feature active and fail the precompile sanity
# check ("desired feature is not equal to the highest active").
[features]
nif_version_2_15 = ["rustler/nif_version_2_15"]
nif_version_2_16 = ["rustler/nif_version_2_16"]
nif_version_2_17 = ["rustler/nif_version_2_17"]
